@@ -27,7 +27,8 @@ CAY-2090 Untangle HttpRemoteService from ServiceContext thread local setup
 CAY-2100 Add supporting generated keys for PostgreSQL
 CAY-2102 EJBQL: db: path not supported in select columns
 CAY-2103 cayenne-crypto: support for mapping non-String and non-binary types
-CAY-2106: cayenne-crypto: allow DI contribution of type converters inside ValueTransformerFactory
+CAY-2106 cayenne-crypto: allow DI contribution of type converters inside ValueTransformerFactory
+CAY-2107 cayenne-crypto: Lazy initialization of crypto subsystem
 
 Bug Fixes:
 
